chore: use object from llama.cpp server

--- a/android/src/main/cpp/CMakeLists.txt
+++ b/android/src/main/cpp/CMakeLists.txt
@@ -169,10 +169,10 @@ set(SOURCE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cpp/LlamaCppModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cpp/SystemUtils.h
     
-    # Add RN-llama files
+    # Add rn-completion files
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cpp/rn-utils.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cpp/rn-llama.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cpp/rn-llama.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cpp/rn-completion.cpp
     
     # Add the common sources
     ${LLAMA_CPP_COMMON_SOURCES}
