--- a/package.json
+++ b/package.json
@@ -96,9 +96,7 @@
     "react-native-builder-bob": "^0.40.0",
     "release-it": "^19.0.0",
     "rimraf": "^6.0.0",
-    "typescript": "^5.8.3",
-    "@novastera-oss/llamacpp-rn": "file:../",
-    "expo-module-gradle-plugin": "~1.0.0"
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
