--- a/example/package.json
+++ b/example/package.json
@@ -19,33 +19,34 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "expo": "^53.0.0",
-    "expo-asset": "~11.1.5",
-    "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.6",
-    "expo-file-system": "~18.1.9",
-    "expo-linking": "~7.1.4",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.79.2"
+    "expo": "~52.0.46",
+    "expo-asset": "~11.0.5",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-file-system": "~18.0.12",
+    "expo-linking": "~7.0.5",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "@novastera-oss/llamacpp-rn": "file:../"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/config-plugins": "~10.0.0",
+    "@expo/config-plugins": "^9.0.17",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.1.3",
-    "@types/react-test-renderer": "^19.1.0",
+    "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^18.3.0",
     "escape-string-regexp": "^5.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
-    "react-test-renderer": "19.1.0",
-    "typescript": "^5.8.3",
-    "eslint-config-expo": "~9.2.0"
+    "jest-expo": "~52.0.6",
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.3.3",
+    "eslint-config-expo": "~8.0.1"
   },
   "private": true
 }
