--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.2",
     "expo": "~52.0.46",
     "expo-asset": "~11.0.5",
     "expo-blur": "~14.0.3",
@@ -36,9 +36,9 @@
     "@novastera-oss/llamacpp-rn": "file:../"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@expo/config-plugins": "^9.0.17",
-    "@types/jest": "^29.5.12",
+    "@babel/core": "~7.25.2",
+    "@expo/config-plugins": "~9.0.17",
+    "@types/jest": "~29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "escape-string-regexp": "^5.0.0",
@@ -47,6 +47,9 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3",
     "eslint-config-expo": "~8.0.1"
+  },
+  "overrides": {
+    "expo-font": "13.0.4"
   },
   "private": true
 }
